<resources>
    <string name="app_name">Smart Track</string>
    <string name="company_name">Logic Software Ltd.</string>
    <string name="company_motto">Be smart</string>
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="nav_Line_Wise_Sewing_Input_Challan_Wise">Line Wise Sewing Input Challan Wise</string>
    <string name="nav_Grey_Fabric_Production">Grey Fabric Production</string>
    <string name="nav_Finish_Fabric_Production">Finish Fabric Production</string>
    <string name="nav_item_report">Report</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_Line_Wise_Sewing_Input_Challan_Wise</item>
        <item>@string/nav_Grey_Fabric_Production</item>
        <item>@string/nav_Finish_Fabric_Production</item>
        <item>@string/nav_item_report</item>
    </string-array>
    <string-array name="categry_names_array">
        <item>-Select-</item>
        <item>Finish Fabric</item>
        <item>Cutting</item>
        <item>Sewing</item>
        <item>AOP</item>
    </string-array>
    <string-array name="categry_ids_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>
    <string name="process">Process</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <string name="login_dummy">Login Dummy</string>
    <string name="login">LOGIN</string>
    <string name="smart_track">SMART TRACKER</string>
    <string name="email">Email</string>
    <string name="username">Username<font fgcolor='#FF0000'>*</font></string>
    <string name="password">Password<font fgcolor='#FF0000'>*</font></string>
    <string name="powered_by">Powered by XACTiDEA</string>
    <string name="empty_user">Please provide a non empty username.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="later">Later</string>
    <string name="submit">Submit</string>
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>
    <string name="dashboard">Dashboard</string>
    <string name="empty_screen">List Empty !!!</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="landing_title">We will find the best!</string>
    <string name="landing_subtitle">Find the nearest places with the best teacher and make your life easier!</string>
    <string name="lets_go">Let\'s go</string>
    <string name="confirm_password">C O N F I R M  \u0020   P A S S W O R D</string>
    <string name="login_sub_title">AKH Knitting And Dyeing Ltd</string>
    <string name="mobile">M O B I L E</string>
    <string name="no_account">Do not have an account?\u0020</string>
    <string name="forgot_passsword">Forgot Password?</string>
    <string name="resister">Register</string>
    <string name="intro_text">Point the camera view to a BARCODE</string>
    <string name="restart_activity">Restart Activity</string>
    <string name="stop_start_qreader">Stop QREader</string>
    <string name="enter_qr_code">Scan/Write Barcode No</string>
    <string name="scanner">Scanner</string>
    <string name="validations_empty">Field could not be empty</string>
    <string name="validations_empty_spinner">One %s should be selected</string>
    <string name="validations_not_positive_integer">Field should be positive integer</string>
    <string name="validations_empty_text">%s could not be empty</string>
    <string name="three">3</string>
    <string name="two_fifty">250</string>
    <string name="validations_not_in_length">Field length should be between %1$s and %2$s</string>
    <string name="validations_not_email">Value is not valid email address</string>
    <string name="validations_not_phone">Value is not valid phone number</string>
    <string name="validations_not_nid">Value is not valid NID number</string>
    <string name="validations_not_in_range">Field should be between %1$d and %2$d</string>
    <string name="validations_password_match">Password do not match</string>
    <string name="validations_image_not_found">%s image should be taken</string>
    <string name="cutting_date">Cutting Date</string>
    <string name="cutting_floor">Cutting Floor</string>
    <string name="bundle_no">Bundle No</string>
    <string name="barcode_no">Barcode No</string>
    <string name="bundle_qty">Bundle Quntity</string>
    <string name="reject">Reject</string>
    <string name="replace">Replace</string>
    <string name="qc_pass">QC Pass</string>
    <string name="qc_quantity">QC Quantity</string>
    <string name="grey_roll_receive">Roll Receive</string>
    <string name="grey_roll_issue">Roll Issue</string>
    <string name="sewing_input">Sewing Input</string>
    <string name="sewing_output">Sewing Output</string>
    <string name="finish_fabric">Finish Fabric QC</string>
    <string name="finish_fabric_entry">Finish Fabric Production Result Entry</string>
    <string name="alter">Alter</string>
    <string name="spot">Spot</string>
    <string name="defect">defect</string>
    <string name="functional_batch">Functional Batch</string>
    <string name="save">SAVE</string>
    <string name="update">UPDATE</string>
    <string name="refresh">REFRESH</string>
    <string name="sample_text">00001</string>
    <string name="batch_id">Batch ID</string>
    <string name="loading_date">Loading Date</string>
    <string name="loading_time">Loading Time</string>
    <string name="job_no">Job No</string>
    <string name="m_c_floor">M/C Floor</string>
    <string name="buyer">Buyer</string>
    <string name="m_c_group">M/C Group</string>
    <string name="ext_no">Ext.No</string>
    <string name="order_no">Order No.</string>
    <string name="color">Color</string>
    <string name="btb_ltb">BTB/LTB</string>
    <string name="file_no">File No</string>
    <string name="ref_no">Ref. No</string>
    <string name="dyeing_type">Dyeing Type</string>
    <string name="process_name">Process Name</string>
    <string name="water_flow">Water Flow</string>
    <string name="hour_load_meter">Hour Load Meter</string>
    <string name="floor">Floor</string>
    <string name="machine_name">Machine Name</string>
    <string name="multi_batch_loading">Multi Batch Loading</string>
    <string name="production_date">Production Date</string>
    <string name="result">Result</string>
    <string name="fabric_type">Fabric Type</string>
    <string name="shift_name">Shift Name</string>
    <string name="responsibility_dept">Responsibility Dept</string>
    <string name="dyeing_production">Dyeing Production</string>
    <string name="slitting_squeezing">Slitting Squeezing</string>
    <string name="slitting_squeezing_roll">Roll Wise Slitting Squeezing</string>
    <string name="company">Company</string>
    <string name="reference_details">Reference Details</string>
    <string name="batch_no">Batch No</string>
    <string name="process_start_date">Process Start Date</string>
    <string name="batch_qty">Batch Qty</string>
    <string name="prod_qty">Prod. Qty</string>
    <string name="loading"></string>
    <string name="unloading"></string>
    <string name="functional_batch_error">Please Enter Functional Batch</string>
    <string name="batch_error">Please Enter Batch</string>
    <string name="re_stenter_no">Re Stenter No.</string>
    <string name="issue_challan_no">Issue Challan No</string>
    <string name="received_challan">Received Challan</string>
    <string name="service_booking">Service Booking</string>
    <string name="process_start_time">Process Start Time</string>
    <string name="process_end_date">Process End Date</string>
    <string name="process_end_time">Process End Time</string>
    <string name="chemical_name">Chemical Name</string>
    <string name="temperature">Temperature</string>
    <string name="stretch">Stretch</string>
    <string name="over_feed">Over Feed</string>
    <string name="feed_in">Feed In</string>
    <string name="pinning">Pinning</string>
    <string name="production_type">Production Type</string>
    <string name="speed_m_min">Speed(M/Min)</string>
    <string name="next_process">Next Process</string>
    <string name="advance_production_qty">Ad. Production Qty</string>
    <string name="re_dyeing">Re Dyeing</string>
    <string name="remarks">Remarks</string>
    <string name="slitting_date">Slitting Date</string>
    <string name="slitting_time">Slitting Time</string>
    <string name="trims_weight">Trims Weight</string>
    <string name="qty">Qty</string>
    <string name="dyeing_start">Dyeing Start</string>
    <string name="dyeing_end">Dyeing End</string>
    <string name="unload_end_date">Unload End Date</string>
    <string name="unload_end_time">Unload End Time</string>
    <string name="stentering">Stentering</string>
    <string name="stentering_roll">Roll Wise Stentering</string>
    <string name="length_shrinkage">Length Shrinkage%</string>
    <string name="width_shrinkage">Width Shrinkage%</string>
    <string name="spirality">Spirality</string>
    <string name="dyeing_time">Dyeing Time</string>
    <string name="compacting">Compacting</string>
    <string name="compacting_roll">Roll Wise Compacting</string>
    <string name="copy_right">2023 © Logic Software Limited - All Rights Reserved.</string>
    <string name="dash_board_value"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="report">Production Report</string>
    <string name="entry">Production Entry</string>
    <string name="title_activity_menu">Logic Software Ltd.</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
</resources>