<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/slTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dp15"
                android:layout_margin="@dimen/dp5"
                android:text="SL"/>
            <TextView
                android:id="@+id/batchNoTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dp15"
                android:layout_weight="2"
                android:layout_margin="@dimen/dp5"
                android:text="@string/batch_no"/>
            <TextView
                android:id="@+id/processStartDateTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dp15"
                android:layout_weight="2"
                android:layout_margin="@dimen/dp5"
                android:text="@string/process_start_date"/>
            <TextView
                android:id="@+id/batchQtyTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dp15"
                android:layout_weight="1"
                android:layout_margin="@dimen/dp5"
                android:text="@string/batch_qty"/>
            <TextView
                android:id="@+id/prodQtyTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dp15"
                android:layout_weight="1"
                android:layout_margin="@dimen/dp5"
                android:text="@string/prod_qty"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>