<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp2"
        android:orientation="vertical">

       <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/ic_date_range_black_24dp" />


            <TextView
                android:id="@+id/tvDate"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cutting_date"
                android:padding="20dp" />

        </LinearLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_cutting_floor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cutting_floor"
                android:inputType="none"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="@dimen/dp12" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_bundle_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bundle_no"
                android:inputType="none"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="@dimen/dp12" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_bundle_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bundle_qty"
                android:inputType="none"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="@dimen/dp12" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_reject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_reject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reject"
                android:inputType="number"
                android:padding="@dimen/dp12" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_replace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/replace"
                android:inputType="number"
                android:padding="@dimen/dp12" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_qc_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qc_pass"
                android:inputType="number"
                android:padding="@dimen/dp12" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</ScrollView>
