<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="65dp"
            android:paddingLeft="@dimen/dp5"
            android:paddingRight="@dimen/dp5"
            android:paddingTop="30dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bottom_border_shadow"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/text_view_1"
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/bundle_no" />
            <TextView
                android:id="@+id/text_view_2"
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="17" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:orientation="horizontal">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_layout_reject"
                            android:layout_width="@dimen/dp0"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7">

                            <EditText
                                android:id="@+id/edit_text_reject"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/reject"
                                android:inputType="number"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                        <Button
                            android:id="@+id/btn_defect"
                            style="@style/Button.Action.Positive"
                            android:layout_width="@dimen/dp0"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_weight=".3"
                            android:text="@string/defect" />
                    </LinearLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_layout_replace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edit_text_replace"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/replace"
                            android:maxLength="5"
                            android:inputType="number"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_layout_qc_qty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edit_text_qc_qty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/qc_quantity"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:maxLength="5"
                            android:inputType="number"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_later"
                style="@style/Button.Action.Negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/Button.Action.Positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/submit" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
